# Dieah

./: .env.example  .gitignore  LICENSE  README.md
dieah-main/: README.md
dieah-main/design/: tokens.json
dieah-main/src-tauri/: Cargo.toml  tauri.conf.json
dieah-main/src-tauri/capabilities/: main-capability.json
dieah-main/src-tauri/icons/: icon.icns
dieah-main/src-tauri/permissions/: gateway.toml  openclaw.toml  settings.toml
dieah-main/src-tauri/src/: chat.rs  lib.rs  main.rs  memory.rs  openclaw.rs  settings.rs  skills.rs  state.rs  types.rs
dieah-main/ui/: index.html
dieah-main/ui/styles/: tokens.css
dieah-memory/: Cargo.toml  README.md
dieah-memory/src/: config.rs  embedding.rs  error.rs  lib.rs  memory.rs  message.rs  retrieval.rs
dieah-memory/src/storage/: jsonl.rs  mod.rs  schema.sql  sqlite.rs  vector.rs
